[build-system]
requires = [
    "setuptools==69.5.1",
    "setuptools_scm[toml]==8.3.1",
    "wheel==0.43.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "hydroqc2mqtt"
dynamic = ["version", "dependencies"]
description = "Extract data from Hydro-Quebec accounts and publish to MQTT with Home Assistant integration"
readme = "README.md"
authors = [
    {name = "Hydroqc Team", email = "info@hydroqc.ca"},
    {name = "SanjayKumar-expert", email = ""}
]
license = {text = "AGPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
    "Topic :: System :: Monitoring",
    "Topic :: Communications",
    "Intended Audience :: End Users/Desktop",
    "Environment :: No Input/Output (Daemon)",
]
keywords = [
    "hydro-quebec", 
    "mqtt", 
    "homeassistant", 
    "home-assistant",
    "hydroqc", 
    "energy-monitoring", 
    "smart-home", 
    "iot",
    "electricity",
    "consumption",
    "quebec",
    "canada"
]

requires-python = ">=3.12.0"
# https://github.com/renovatebot/renovate/issues/10187
#dependencies    = [
#    "mqtt-hass-base==4.0.13",
#    "Hydro_Quebec_API_Wrapper==0.6.5",
#    "python_dateutil==2.8.2",
#    "packaging==21.3",
## The following lines should not be there
## but they solve a dependency issue
## we should try to remove them
## each time we upgrade the dependencies here
#    "attrs==21.2.0",
#    "charset-normalizer==2.1.1",
#    "yarl==1.7.2",
#]

[project.urls]
"Homepage" = "https://hydroqc.ca"
"Documentation" = "https://hydroqc.ca"
"Source Code" = "https://github.com/SanjayKumar-expert/forked-1"
"Bug Reports" = "https://github.com/SanjayKumar-expert/forked-1/issues"
"Repository" = "https://github.com/SanjayKumar-expert/forked-1"
"Discussions" = "https://discord.gg/2NrWKC7sfF"
"Funding" = "https://hydroqc.ca/en/donations"

[tool.setuptools]
platforms = ["any"]
include-package-data = true


[tool.setuptools.packages.find]
include = ["hydroqc2mqtt*"]

[tool.setuptools_scm]

[project.scripts]
hydroqc2mqtt = "hydroqc2mqtt.__main__:main"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "module"
