# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://hydroqc.ca

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    mqtt-hass-base==4.1.5
    Hydro_Quebec_API_Wrapper==3.0.1
    python_dateutil==2.8.2
    packaging==23.0
    pytz==2022.7.1
# The following lines should not be there
# but they solve a dependency issue
# we should try to remove them
# each time we upgrade the dependencies here
#   attrs==21.2.0
    charset-normalizer==2.1.1
#    yarl==1.7.2
