# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://hydroqc.ca

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    mqtt-hass-base==4.2.2
    Hydro_Quebec_API_Wrapper==3.0.8
    python_dateutil==2.8.2
    packaging==23.1
    pytz==2023.3
# The version of home assistant is set by mqtt-hass-base
    homeassistant
# The following lines should not be there
# but they solve a dependency issue
# we should try to remove them
# each time we upgrade the dependencies here
#   attrs==21.2.0
    charset-normalizer==3.1.0
#    yarl==1.7.2
