# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://hydroqc.ca

# https://github.com/renovatebot/renovate/issues/10187
[options]
install_requires =
    mqtt-hass-base==4.4.0
    Hydro_Quebec_API_Wrapper==4.0.0
    python_dateutil==2.9.0.post0
    packaging==24.1
    pytz==2024.2
# The version of home assistant is set by mqtt-hass-base
    homeassistant
# The following lines should not be there
# but they solve a dependency issue
# we should try to remove them
# each time we upgrade the dependencies here
#   attrs==21.2.0
    charset-normalizer==3.3.2
#    yarl==1.7.2
